--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,11 @@ textarea {
   width: 100%;
   display: block;
   padding: 0px 20px;
-  border: 1px solid #eee;
+  border: 1px solid rgba(32, 32, 32, 0.2);
+}
+
+.input_small {
+  padding: 0px 20px 0 8px;
 }
 
 .input._form-focus {
@@ -388,7 +392,7 @@ body::after {
   background: #F98373;
   -webkit-box-shadow: 0px 4px 15px 0px rgba(253, 116, 56, 0.2);
           box-shadow: 0px 4px 15px 0px rgba(253, 116, 56, 0.2);
-  padding: 1.125rem 2.25rem;
+  padding: 1rem 2.25rem;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
@@ -483,7 +487,6 @@ body::after {
 }
 
 .open__title {
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   font-weight: 900;
   line-height: 125%;
 }
@@ -547,7 +550,7 @@ body::after {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  z-index: 120;
+  z-index: 40;
 }
 
 .menu-open .menu__list {
@@ -555,6 +558,7 @@ body::after {
 }
 
 .menu__link {
+  line-height: normal;
   position: relative;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -565,7 +569,7 @@ body::after {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   content: "";
-  bottom: -2px;
+  bottom: -0.0875rem;
   left: 0;
   width: 100%;
   position: absolute;
@@ -720,22 +724,23 @@ body::after {
 }
 
 .menu-footer__item {
-  position: relative;
   z-index: 1;
 }
 
 .menu-footer__link {
+  position: relative;
   color: #FFF;
   font-weight: 600;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  line-height: normal;
 }
 
 .menu-footer__link::after {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   content: "";
-  bottom: -2px;
+  bottom: -0.09375rem;
   left: 0;
   width: 100%;
   position: absolute;
@@ -915,7 +920,10 @@ body::after {
 }
 
 .about {
+  overflow: hidden;
   position: relative;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .no-webp .about::after{
@@ -1123,6 +1131,8 @@ body::after {
 }
 
 .how {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   background-color: #EBF1F9;
   position: relative;
 }
@@ -1416,7 +1426,7 @@ body::after {
 }
 
 .contact__text a {
-  text-decoration: underline;
+  border-bottom: 2px solid #000;
 }
 
 .form {
@@ -1856,12 +1866,12 @@ body::after {
     font-size: 1.375rem;
   }
 
-  .about__container {
-    padding-top: 5.5625rem;
+  .about {
+    margin-bottom: 6.375rem;
   }
 
   .about__container {
-    margin-bottom: 6.375rem;
+    padding-top: 5.5625rem;
   }
 
   .about__items {
@@ -2121,40 +2131,6 @@ body::after {
   .menu__body {
     padding-top: 4.1875rem;
   }
-
-  .item-amount._watcher-view {
-    background: #357AE0;
-  }
-
-  .item-amount._watcher-view .item-amount__price {
-    color: #FFF;
-  }
-
-  .item-amount._watcher-view .item-amount__text {
-    color: #FFF;
-  }
-
-  .item-amount._watcher-view .item-amount__button {
-    color: #000;
-    background: #FFF;
-  }
-
-  .item-amount._watcher-view .item-amount__button:active {
-    background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), #FFF;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%), #FFF;
-  }
-
-  .item-amount._watcher-view .item-amount__gift {
-    color: #000;
-    background: #FFF;
-  }
-}
-
-@media (max-width: 25em) and (any-hover: hover) {
-  .item-amount._watcher-view .item-amount__button:hover {
-    -webkit-box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.4);
-            box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.4);
-  }
 }
 
 @media (max-width: 20em) {
@@ -2222,12 +2198,12 @@ body::after {
     font-size: 1rem;
   }
 
-  .about__container {
-    padding-top: 2.5rem;
+  .about {
+    margin-bottom: 2.5rem;
   }
 
   .about__container {
-    margin-bottom: 2.5rem;
+    padding-top: 2.5rem;
   }
 
   .about__items {
@@ -2522,7 +2498,7 @@ body::after {
   .menu__body::after {
     content: "";
     position: fixed;
-    top: 0;
+    top: -1px;
     left: -100%;
     width: 100%;
     background-color: #FFF;
@@ -2599,6 +2575,8 @@ body::after {
 
   .menu-open .icon-menu span {
     width: 0;
+    -webkit-transition: all 0s ease 0s;
+    transition: all 0s ease 0s;
   }
 
   .menu-open .icon-menu::before,
@@ -2784,6 +2762,10 @@ body::after {
 }
 
 @media (max-width: 37.5em) {
+  .input {
+    padding: 0px 20px 0 8px;
+  }
+
   .about__icon {
     margin: 0 -0.625rem;
   }
@@ -2884,6 +2866,42 @@ body::after {
         -ms-flex: 1 1 100%;
             flex: 1 1 100%;
     width: 100%;
+  }
+}
+
+@media (max-width: 23.125em) {
+  .item-amount._watcher-view {
+    background: #357AE0;
+  }
+
+  .item-amount._watcher-view .item-amount__price {
+    color: #FFF;
+  }
+
+  .item-amount._watcher-view .item-amount__text {
+    color: #FFF;
+  }
+
+  .item-amount._watcher-view .item-amount__button {
+    color: #000;
+    background: #FFF;
+  }
+
+  .item-amount._watcher-view .item-amount__button:active {
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), #FFF;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%), #FFF;
+  }
+
+  .item-amount._watcher-view .item-amount__gift {
+    color: #000;
+    background: #FFF;
+  }
+}
+
+@media (max-width: 23.125em) and (any-hover: hover) {
+  .item-amount._watcher-view .item-amount__button:hover {
+    -webkit-box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.4);
+            box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.4);
   }
 }
 
@@ -3080,6 +3098,18 @@ body::after {
     }
 }
 
+@supports (margin-bottom: clamp( 2.5rem , 1.4122807018rem  +  5.4385964912vw , 6.375rem )) {
+    .about {
+      margin-bottom: clamp( 2.5rem , 1.4122807018rem  +  5.4385964912vw , 6.375rem );
+    }
+}
+
+@supports not (margin-bottom: clamp( 2.5rem , 1.4122807018rem  +  5.4385964912vw , 6.375rem )) {
+    .about {
+      margin-bottom: calc(2.5rem + 3.875 * (100vw - 20rem) / 71.25);
+    }
+}
+
 @supports (padding-top: clamp( 2.5rem , 1.6403508772rem  +  4.298245614vw , 5.5625rem )) {
     .about__container {
       padding-top: clamp( 2.5rem , 1.6403508772rem  +  4.298245614vw , 5.5625rem );
@@ -3089,18 +3119,6 @@ body::after {
 @supports not (padding-top: clamp( 2.5rem , 1.6403508772rem  +  4.298245614vw , 5.5625rem )) {
     .about__container {
       padding-top: calc(2.5rem + 3.0625 * (100vw - 20rem) / 71.25);
-    }
-}
-
-@supports (margin-bottom: clamp( 2.5rem , 1.4122807018rem  +  5.4385964912vw , 6.375rem )) {
-    .about__container {
-      margin-bottom: clamp( 2.5rem , 1.4122807018rem  +  5.4385964912vw , 6.375rem );
-    }
-}
-
-@supports not (margin-bottom: clamp( 2.5rem , 1.4122807018rem  +  5.4385964912vw , 6.375rem )) {
-    .about__container {
-      margin-bottom: calc(2.5rem + 3.875 * (100vw - 20rem) / 71.25);
     }
 }
 
@@ -4039,7 +4057,7 @@ body::after {
   }
 
   .contact__text a:hover {
-    text-decoration: none;
+    border-bottom: none;
   }
 
   .success__text a:hover {
